NEVB-679 Bug: Fix the issue on Viz 5 where boxes are being clipped in comparison mode

--- a/public/CSS/canadasEnergyFutureVisualization.css
+++ b/public/CSS/canadasEnergyFutureVisualization.css
@@ -581,7 +581,7 @@ div.chartTooltip:after {
   box-sizing: border-box;
 }
 #canadasEnergyFutureVisualization .smallSelectorColumn_rightAligned {
-  width: 2.7%;
+  width: 3.2%;
   float: right;
   box-sizing: border-box;
 }
